--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
-    "express-hbs": "^2.3.4",
+    "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "helmet": "^4.3.1",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.10",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@lnu/eslint-config": "^1.1.2",
