--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-hbs": "^2.3.4",
     "express-session": "^1.17.1",
     "helmet": "^4.3.1",
     "http-errors": "^1.8.0",
@@ -40,7 +41,8 @@
     "nodemon": "^2.0.7"
   },
   "eslintConfig": {
-    "extends": "@lnu"
+    "extends": "@lnu",
+    "parser": "babel-eslint"
   },
   "nodemonConfig": {
     "ext": "js,json,hbs,html,css"
