--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-hbs": "^2.3.4",
     "express-session": "^1.17.1",
     "helmet": "^4.3.1",
     "http-errors": "^1.8.0",
+    "joi": "^17.3.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0",
