--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
@@ -43,8 +44,7 @@
     "nodemon": "^2.0.7"
   },
   "eslintConfig": {
-    "extends": "@lnu",
-    "parser": "babel-eslint"
+    "extends": "@lnu"
   },
   "nodemonConfig": {
     "ext": "js,json,hbs,html,css"
