--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@lnu/eslint-config": "^1.1.2",
