--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "start:dev": "nodemon --inspect -r dotenv/config src/server.js",
+    "start": "NODE_ENV=production node -r dotenv/config src/server.js",
+    "start:dev": "NODE_ENV=development nodemon --inspect -r dotenv/config src/server.js",
     "lint": "npx eslint src || exit 0",
     "lint:fix": "npx eslint src --fix || exit 0"
   },
